--- a/index.css
+++ b/index.css
@@ -1,16 +1,24 @@
 body{
-	margin: auto;
+	margin:0 auto;
+}
+h1,h2,h3,h4,h5,h6,p{
+	padding-top: 15px;
+	margin: 0;
 }
 header{
 	margin: auto;
 
 
 }
-#navigation{
+.navigation{
 	text-align: right;
+	width: 70%;
 	
 }
-#navigation ul li{
+.logo{
+	width: 48%;
+}
+.navigation ul li{
 	list-style: none;
 	font-family: cursive;
 	letter-spacing: 0.5px;
@@ -19,32 +27,73 @@ header{
     color: black;
 
 }
-#navigation ul{
+.navigation ul{
 	margin-top: 0px;
 	margin-bottom: 0px;
 	display: inline-flex;
 	flex-direction: row;
 	padding-bottom: 15px;
-	
+	padding-top: 15px;
 	
 
 }
-#navigation ul li a:hover{
-	font-size: 25px;
+.navigation ul li a:hover{
 	background-color: red;
 	text-decoration: underline;
 	color: black;
 
 }
+.navigation ul li a:focus{
+	color: blue;
+}
 ul li a{
 	text-decoration: none;
 	color: black;
 }
-#name{
-	margin-bottom: 0px;
-	margin-top: 0px;
+.name{
 	font-family: lobster;
 	padding-left: 5px;
 	text-align: left;
+	width: 100%;
+	display: inline-flex;
+	flex-direction: row;	
+}
+#image{
 	
+	padding:10px;
+}
+#contact{
+	text-align: left;
+	padding-left: 5px;
+
+}
+section{
+	background-color: rgb(180, 70, 200);
+	width: 100%;
+	padding: 0px;
+	font-size: 20px;
+	display: flex;
+	flex-direction: row;
+
+}
+#contact ul{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	display: inline-flex;
+	flex-direction: column;
+	padding-bottom: 15px;
+	padding-top: 15px;
+
+}
+#contact ul li{
+	list-style: none;
+	font-family: cursive;
+	letter-spacing: 0.5px;
+	padding-right: 5px;
+	padding-left: 5px;
+    color: black;
+    display: inline-flex;
+    flex-direction: column;
+
+
 }
