--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ body{
 h1,h2,h3,h4,h5,h6,p{
 	padding-top: 15px;
 	margin: 0;
+
 }
 header{
 	margin-bottom: 0px;
@@ -29,7 +30,7 @@ header{
 	padding-right: 10px;
 	padding-left: 10px;
     font-size: 20px;
-
+    
 }
 .navigation ul{
 	margin-top: 0px;
@@ -40,6 +41,7 @@ header{
 	padding-top: 15px;
 	padding-right: 15px;
 	overflow: hidden;
+	text-align: right;
 }
 .navigation ul li a:hover{
 	
@@ -60,7 +62,7 @@ ul li a{
 .navigation li a {
 	display: block;
 	color: black;
-	text-align: center;
+	
 	padding: 12px 14px;
 	text-decoration:none;
 }
@@ -183,11 +185,6 @@ footer{
   	padding: 5px;
   	cursor: pointer;
 }
-.main h4:hover{
-
-	transform: translate(20px, 20px);
-	transition: transform 2s ease;
-}
 
 
 .main h3{
@@ -206,9 +203,9 @@ footer{
 	width: 200px;
 	height: 162px;
 	border: 1px solid #272822;
-    border-radius: 4px;
+    border-radius: 6px;
     transition: width 2s, height 2s, transform 2s;
-    padding: 5px;
+    box-shadow: 3px 3px 4px red;
 }
 .main img:hover{
 	box-shadow: 0 0 2px 5px rgba(200, 250, 210, 0.5);
@@ -249,7 +246,7 @@ footer{
 	padding-right: 10px;
 	font-size: 18px;
 	font-family: Imprint MT Shadow;
-	
+	margin-bottom: 50px;
 	
 }
 .me p:hover{
@@ -265,10 +262,14 @@ footer{
 	box-shadow: 0 0 2px 5px rgba(200, 250, 210, 0.5);
 	margin-left: 10px;
 	transition: width 4s;
+	margin-bottom: 40px;
 }
 .me img:hover{
 	width: 200px;
-
+	margin-bottom: 20px;
+}
+.me{
+	background: linear-gradient(to right, #2BC9DE, grey);
 }
 
 .con .aa form label{
@@ -283,13 +284,14 @@ footer{
 .con .aa form input{
 	border: 1px solid green;
 	border-radius: 5px;
-	padding-left: 10px;
+	padding-left: 20px;
 	font-family: italic;
 	box-shadow: 2px 2px 2px blue;
-	padding: 3% 1%;
+	padding: 6% 2%;
 	font-family: cursive;
-	
-	
+	padding-right: 20px;
+	margin-left: 8px;
+	text-align: center;
 }
 
 .con legend{
@@ -310,8 +312,9 @@ footer{
 }
 .con .bb img{
 	
-	height: 300px;
+	height: 400px;
 	float: right;
+
 
 }
 
@@ -319,7 +322,194 @@ footer{
 
 	margin: 0px;
 	float: left;
+	
 }
 .con iframe{
 	padding-left: 15px;
+}
+.cv{
+	background: linear-gradient(to right, #2BC9DE, grey);	
+}
+.cv .inner h3{
+	font-size: 30px;
+	text-align: center;
+	font-family: Bodoni MT Black;
+	text-decoration: underline;
+}
+.cv .inner p{
+	text-shadow: 3px 3px 3px grey;
+	font-family: Calibri (Body);
+	padding-left: 10px;
+	font-size: 19px;
+}
+.cv .inner legend{
+	text-align: center;
+	text-shadow: 2px 2px 2px grey;
+	font-size: 25px;
+ 	font-family: Algerian;
+}
+.cv .inner h2{
+	text-shadow: 4px 4px 4px yellow;
+	font-size: 19px;
+}
+.cv .inner ul{
+	width:50%;
+	text-decoration: none;
+	list-style-type: square;
+}
+.cv .inner li{
+	font-size: 25px;
+	font-family: Bookshelf Symbol 7;
+}
+
+
+/*Contact Card CSS*/
+.class{
+	display: inline-flex;
+	flex-direction: row;
+	justify-content: space-around;
+	width: 100%;
+}
+iframe{
+	width: 50%;
+}
+.card1 {
+  box-shadow: 0 4px 8px #fff;
+  width: 45%;
+  max-width: 260px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
+}
+.box {
+  padding: 0 16px;
+  background: #fff;
+  padding-bottom: 10px;
+}
+
+.box:after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+.socialmedia a{
+	width: 30px;
+	height: 20px;
+}
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+button:hover, a:hover {
+  opacity: 0.7;
+}
+/*This is for cv*/
+.first1{
+	width: 100%;
+	display: inline-flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+.other{
+	width: 33%;
+}
+.other ul li{
+	text-shadow: 3px 3px 3px grey;
+
+}
+.skill{
+	width: 33%;
+	padding: 0 100px;
+	display:  block;
+
+}
+.skill ul li{
+	text-shadow: text-shadow: 3px 3px 3px grey;
+}
+.experience{
+	width: 33%;
+}
+.experience ul li{
+	text-shadow: text-shadow: 3px 3px 3px grey;
+}
+#rrr{
+	background:linear-gradient(to right, #2BC9DE, grey);
+	padding-left: 10px;
+	padding-right: 10px;
+
+}
+#rrr img{
+	width: 100%;
+	height: 600px;
+}
+#another{
+	background: linear-gradient(to right, #2BC9DE, grey);
+	padding-left: 10px;
+	padding-right: 10px;
+	word-wrap: all;
+	font-family: Imprint MT Shadow;
+	font-size: 18px;
+}
+#another p:hover{
+	font-weight: bold;
+	text-shadow: 3px 3px 5px blue;
+}
+#rrr p{
+	font-size: 30px;
+	text-align: center;
+	text-decoration: underline;
+	color: rgb(100, 100, 100);
+	text-shadow: 4px 4px 4px #fff;
+
+}
+.ff p{
+	color:#A7896D;
+	text-align: left;
+	padding-left: 10px;
+	opacity: 0.1;
+	transition: width 6s;
+	transition-timing-function: linear;
+	margin: 0px;
+	}
+.ee .ff p:hover{
+	color: #000;
+	display: inline;
+	padding-left: 5px;
+	text-shadow: 3px 3px 5px blue;
+	font-size: 22px;
+	opacity: 1;
+	font-weight: bold;
+	width: 200px;
+	padding-top: 5px;
+}
+.ee{
+	display: inline-flex;
+	flex-direction: row;
+	width: 1850px;
+
+}
+
+
+.imagehover img{
+	width: 100px;
+	height: 100px;
+	box-shadow: 3px 3px 3px yellow;
+	border-radius: 6px;
+	border: 1px solid yellow;
+	margin: 4px;
 }
