--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@ header{ /*header part*/
 .navigation ul li{
 	list-style: none; /* helps to remove the dot */
 	font-family: cursive;/*  text style is set to cursive*/
-	letter-spacing:0.5%;/* the letter the space of 0.5% from each other*/
+	letter-spacing:0.5;/* the letter the space of 0.5% from each other*/
 	padding-right: 2%;/*giving padding to the right*/
 	padding-left: 2%;/* giving padding to the left*/
     font-size: 20px;/* letter size is set to 20px as per it need */
@@ -542,7 +542,7 @@ button:hover, a:hover {
 {
 	width: 100%;
 	display: flex;
-	flex: column;
+	flex-direction:column;
 }
 .first1{
 	width: 100%;
@@ -574,7 +574,7 @@ header
 }
 .ee
 {margin: 0 auto;
-	width: 30%;
+	width: 13%;
 	display: flex;
 	flex-direction: column;
 }
@@ -656,7 +656,7 @@ fieldset
 {
 	width: 100%;
 	display: flex;
-	flex: column;
+	flex-direction:column;
 }
 .first1{
 	width: 100%;
