--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ ul li a{
 .navigation li a {
 	display: block;/*keeping the display property block*/
 	color: black;
-	
+	font-size: 16px;
 	padding: 12px 14px;/* padiing is set in all direction*/
 	text-decoration:none;/* no text decoration*/
 }
